feat: align with current koblas targets